refactor report microservices